# datafusion-benchmarking

./: .gitignore  .history  Cargo.toml  README.md  bench.sh  benchmark.py  build-releases.sh  build_datafusion_cli.sh  build_datafusion_cli_old.sh  commits.csv  compare2_branches.sh  compare_arrow_branch.sh  compare_branch.sh  compare_branch_bench.sh  compare_sqlparser_branch.sh  criterion.sh  ensure_datafusion_cli.py  events.json  gh_compare_arrow.sh  gh_compare_branch.sh  gh_compare_branch_bench.sh  package-lock.json  package.json  poll.sh  releases.json  report.py  report_labels.json  run_clickbench.py  test_planning.sh  test_planning_against_37.sh  tsconfig.base.json
controller/: Cargo.toml  Dockerfile
controller/migrations/: 001_initial.sql  002_per_side_config.sql  004_section_body.sql
controller/src/: benchmarks.rs  comment_render.rs  config.rs  db.rs  github.rs  github_poller.rs  health.rs  job_manager.rs  lib.rs  main.rs  models.rs
controller/src/runner/: bench_arrow.rs  bench_criterion.rs  bench_standard.rs  config.rs  controller_client.rs  git.rs  mod.rs  monitor.rs  poster.rs  shell.rs
docs/: index.html
infra/: Pulumi.yaml  bootstrap.sh  bootstrap_oidc.sh  cluster.ts  controller.ts  identity.ts  index.ts  package-lock.json  package.json  registry.ts  storage.ts  tsconfig.json
results/: 2025-06-29 09:53:52-results.csv  2025-06-29 10:17:35-results.csv  2025-06-29 10:22:31-results.csv  2025-06-29 10:36:52-results.csv  2025-06-29 10:55:50-results.csv  2025-06-29 11:10:11-results.csv  2025-06-29 11:19:56-results.csv  2025-06-29 11:29:38-results.csv  (+225 more)
runner/: Cargo.toml  (+6 more)
(+97 files in other folders)
