[package]
name = "benchmark-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[[bin]]
name = "runner"
path = "src/bin/runner.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
logfire = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
once_cell = "1"
tokio-util = { version = "0.7", features = ["rt"] }
backon = "1"
